2011-07-30  Stefan Reiser <stefanreiser@users.sourceforge.net>

	* src/win/wgraph.c (WriteGraphIni): Fix spelling of "Antialiasing"
	field. Bug #3382732

2011-07-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_impulses): Skip UNDEFINED points.
	Bug #3382469

2011-07-28  Bastian Maerkisch  <bmaerkisch@web.de>

	*src/win/wgraph.c (GraphEnhancedOpen, GraphEnhancedFlush): Fix sign
	error in placement of rotated enhanced text with sub-/superscripts.

2011-07-27  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Handle multiple overprint characters, albeit not
	the way people probably expect.
	Bug #3371782

2011-07-25  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Remove size limit on svg plot dimensions.

2011-07-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp: Fix MSWin breakage from yesterday's patch
	due to conditional code block damage.
	Bug #3376861

	* src/datafile.c (df_readbinary): Allow "using ... xticlabels()" for
	binary files as well as ascii files.  Only string-valued functions
	are valid in this case, as no string can be read from the binary 
	datafield itself.

	* src/graph3d.h src/hidden3d.c src/misc.c src/misc.h src/plot3d.c:
	Re-work assignment of color and line type to top/bottom hidden3d
	surfaces.  Keep the user-requested linetype in a new field of the
	splot structure, since otherwise linetype definitions would overwrite
	it. 

2011-07-23  Adam Strzelecki <ono@users.sourceforge.net>

	* src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_gui.h m4/apple.m4:
	OSX support for wxt terminal.  For OSX, switch to using single-threaded
	hybrid GUI & console event loop at wxt_waitforinput().
	Add -framework ApplicationServices to the apple-specific
	configuration flags.

2011-07-23  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	* m4/apple.m4:  Replace -laquaterm with -Wl,-framework -Wl,AquaTerm
	which is supposed to make the Macports version of aquaterm install
	properly.
